feat: add endpoint for breathing rate
