# backend/src/types/api/wellness.ts
@@ -1,8 +1,14 @@
 import { TemperatureLogType } from "@prisma/client";
 
-export interface SkinTempResponseDTO {
+export interface TemperatureDTO {
   id: string;
   dateTime: Date;
   nightlyRelative: number;
   logType: TemperatureLogType;
+}
+
+export interface BreatingRateDTO {
+  id: string;
+  dateTime: Date;
+  breathingRate: number;
 }
